    (Closes upstream issue: #74).
  * Follow-up commit for 302_nxagent_configurable-keystrokes.full.patch, fixes
    FTBFS problem with the first version of that patch.

  [ Mike Gabriel ]
  * Add README.keystrokes to doc section of bin:package nxagent.
  * Add libxml2-dev to build dependencies.
  * Add pkg-config to build dependencies.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 Nov 2012 21:14:23 +0100

nx-libs (2:3.5.0.16-0) unstable; urgency=low

  * Fix installation of header files in Debian package.
  * Fix patch file names concerning component nx-X11.
  * Modify patch: 032_no-x11r6.full.patch. Install nx-X11 to /usr/local/lib/nx.
  * Add patch: 032_no-x11r6.debian.patch. Use /usr/lib/nx for nx-X11 on Debian.
  * Drop patch 032, fix other patches so that installation via make install
    installs NX components to /usr/local/lib/nx and /usr/local/include/nx.
  * Add patches: 024_fix-make-clean.full.patch,
    024_fix-make-clean.full+lite.patch. Fix clean-up of build tree after
    make build has run.
  * Add patch: 025_nxproxy_no-configure-file.full+lite.patch. Remove
    unneeded build file from NoMachine's nxproxy sources.
  * Modify patch: 001_add-main-makefile.full+lite.patch. Install nx* and
    x2goagent wrapper scripts during make install.
  * Fix wrapper scripts: make sure all NX executables can be launched
    if NX gets installed via the tarball installation method.
  * Modify patch: 001_add-main-makefile.full+lite.patch. Add uninstall
    routine.
  * Dropping empty override rules for quilt patch from /debian/rules.
  * Bump Debian Standards to 3.9.3 (no changes needed). Update Home page and
    Vcs information.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 Nov 2012 21:07:49 +0100

nx-libs (2:3.5.0.15-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Improve 020_add-nxagent-wrapper.full.patch: Properly set NX_TEMP, make
    sure nxagent launches even with pam_tmpdir.so being in use.