@@ -32,11 +32,5 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 
-#override_dh_strip:
-#        dh_strip -plibnx-x11 --dbg-package=libnx-x11-dbg
-#        dh_strip -plibxcomp3 --dbg-package=libxcomp-dbg
-#        dh_strip -plibxcompext3 --dbg-package=libxcompext-dbg
-#        dh_strip -plibxcompshad3 --dbg-package=libxcompshad-dbg
-#        dh_strip -pnxagent --dbg-package=nxagent-dbg
-#
-#.PHONY: override_dh_strip
+override_dh_strip:
+	dh_strip --dbg-package=nx-x11-dbg
