@@ -15,7 +15,11 @@ nx-libs (2:3.5.0.17-0) UNRELEASED; urgency=low
   * Add libxml2-dev to build dependencies.
   * Add pkg-config to build dependencies.
 
- -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 Nov 2012 21:14:23 +0100
+  [ Reinhard Tartler ]
+  * install debug symbols for all packages in a new binary package
+    'nx-x11-dbg'.
+  
+ -- Reinhard Tartler <siretart@tauware.de>  Sun, 09 Dec 2012 09:38:58 +0100
 
 nx-libs (2:3.5.0.16-0) unstable; urgency=low
 
